using UnityEngine;
using System.Collections;

public class Shit : AAttack
{
    void Awake()
    {
        StaminaCost = 20f;
        AttackDamage = 3f;
    }

    void Update()
    {
        // Handling enemy attacks
        if (
            isEnemy
            && Input.GetKeyDown(KeyCode.V)
            && canShoot
            && BelongsTo.CurrentStamina > StaminaCost
        )
        {
            Debug.Log(
                $"Current Stamina: {BelongsTo.CurrentStamina}, Stamina Cost: {StaminaCost}, Can Shoot: {canShoot}"
            );

            PerformAttack();
        }
        // Handling player1 attacks
        else if (
            !isEnemy
            && Input.GetKeyDown(KeyCode.C)
            && canShoot
            && BelongsTo.CurrentStamina > StaminaCost
        )
        {
            Debug.Log(
                $"Current Stamina: {BelongsTo.CurrentStamina}, Stamina Cost: {StaminaCost}, Can Shoot: {canShoot}"
            );

            PerformAttack();
        }

        // Stopping the particle system when the button is released
        if ((isEnemy && Input.GetKeyUp(KeyCode.V)) || (!isEnemy && Input.GetKeyUp(KeyCode.C)))
        {
            AttackParticle.Stop();
        }
    }
}
