@startuml

interface IAttack {
    +void PerformAttack()
}

abstract class AAttack {
    +Toilet BelongsTo
    +ParticleSystem AttackParticle
    +bool isEnemy
    +float StaminaCost
    +float AttackDamage
    +bool canShoot
    +void Start()
}

class Shit {
}

class Piss {
}

interface IItem {
    +void Give(Toilet toilet)
    +void CreateItem(Vector3 position)
    +Vector3 VectorGenerator()
}

abstract class AItem {
}

class Bottle {
    +override void Give(Toilet ToiletToHeal)
}

class Cigar {
    +void Awake()
    +override void Give(Toilet ToiletToHeal)
}

IAttack <|.. AAttack
AAttack <|-- Shit
AAttack <|-- Piss
IItem <|.. AItem
AItem <|-- Bottle
AItem <|-- Cigar

@enduml